--- a/chaussure3.html
+++ b/chaussure3.html
@@ -116,7 +116,7 @@
             <p class="tag_solde_details">-20%</p>
           </div>
           <div class="infos_row">
-            <button type="submit" class="button_pink large">Ajouter au panier</button>
+            <button type="submit" class="button_black large">Ajouter au panier</button>
           </div>
         </form>
       </div>
@@ -141,7 +141,6 @@
       </div>
       <div class="details_row">
         <p class="b">Pointure</p>
-        <p>Coupe droite.</p>
         <p>Le modèle mesure 1m80 et porte une taille 42.</p>
       </div>
       <div class="details_row">
@@ -157,7 +156,7 @@
     <div class="details_article mb">
       <div class="details_row">
         <p class="inter_other_2 italic b mb">4,3 sur 5</p>
-        <a class="link_underline pink_text" href="">Voir 6 avis</a>
+        <a class="link_underline black_text" href="">Voir 6 avis</a>
       </div>
       <div class="avis_row mb">
         <div class="avis_titre">
