--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             </label>
           </div>
           <div>
+            <a href="chaussure3.html"><img class="image_article_petit" src="chaussure.jpg" alt=""></a>
+            <a href="chaussure2.html"><img class="image_article_petit" src="chaussure.jpg" alt=""></a>
+          </div>
+          <div>
             <p class="coloris mb">Pointure</p>
             <div class="custom_taille">
               <select name="taille" id="taille">
