--- a/chaussure3.html
+++ b/chaussure3.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="bread_crumb">
-    <a class="grey" href="#">Accueil</a> > <a class="grey" href=".tee-shirts">Tee-shirts</a>
+    <a class="grey" href="#">Accueil</a> > <a class="grey" href=".tee-shirts">Chaussure</a>
   </div>
 
   <section role="section">
@@ -43,12 +43,8 @@
           </defs>
           <path id="product-shape1" class="cls-1"
             d="M326.6,264.54s-3.12,31.42,4.8,43.65c0-.24,4.8,15.35,27.34,16.55l67.16,11.99,37.16,115.5-86.3,18.36s-53.41-109.26-64.52-117c-1.88-.74,8.65-85.84,14.36-89.06Z" />
-          <path id="product-shape2" class="cls-4"
-            d="M597.14,605.35s12.25,26.48,2.53,32.11c0,0-27.13,11.46-66.06-32.79l-28.93-37.65s-11.49-7.66-18.72-2.77c0,0-13.83,4.68-19.57-7.02l-9.57-15.95s-1.91-9.79,5.32-12.55c0,0,28.51-8.72,31.48-6.81l-4.47-7.87s-19.15-40.42-20.64-47.65l-5.45-14.16-86.3,18.36c17.37,50.57,59.06,97.21,115.15,141.53,0,0,48.62,42.66,90.6,54.24,0,0,34.12,8.27,30.4-19.44,0,0,.3-3.31-15.77-41.57Z" />
           <path id="product-shape3" class="cls-3"
             d="M312.24,353.59s3.58-62.78,14.36-89.06c0,0-2.71-32.36,14.48-58.53,0,0-36.75,37.28-53.14,42.83,0,0-20.62,14.28-6.35,46.27,0,0,21.11,44.79,30.65,58.49Z" />
-          <path id="product-shape4" class="cls-2"
-            d="M467.6,292.39s38.58.73,41.73-1.21c0,0,8.73,31.78,7.04,47.31,0,0-16.16,5.46-27.29.88-5.95-2.45-8.15-9.85-10.81-17.84l-10.67-29.13Z" />
           <path id="product-shape5" class="cls-2"
             d="M256.31,281.06s-21.42,22.31-3.98,55.22l41.97,74.21s37.77,65.6,39.54,72c0,0,35.12,81.28,66.48,112.2,0,0,108.28,105.81,160.31,107.52,0,0,10.75,3.47,23.55-4.2-.8,0,29.58-13.59,28.78-31.18,0,0,5.59-9.84-.04-19.92,3.07,25.4-25.83,28.74-74.19-1.07-36.5-24.85-72.25-54.33-107.15-88.97-30.64-30.04-51.49-75.65-54.81-86.3-39.93-86.19-64.52-117-85.85-156.5-9.86-19.76-20.81-36.03-9.08-58.67,0,0-24.08,23.53-25.51,25.63Z" />
         </svg>
@@ -66,7 +62,7 @@
         </div>
         <p class="desc_article">
           La chaussure qui vous accompagnera tous les jours avec son cuir travaillée avec précision dans nos ateliers.
-          Cette paire s'adapte également à vos goûts car elle est entièrement personnalisable.
+          Cette paire s'adapte également à vos goûts car vous choisissez parmi des couleurs prédéfinies.
         </p>
         <p class="b">Sélectionnez la partie à personnaliser</p>
         <div class="infos_row">
@@ -99,6 +95,10 @@
             <label class="row" for="couleur6">
               <div class="color" style="background-color: #ffffff" data-hex="#ffffff"></div>
             </label>
+          </div>
+          <div>
+            <a href="index.html"><img class="image_article_petit" src="chaussure.jpg" alt=""></a>
+            <a href="chaussure2.html"><img class="image_article_petit" src="chaussure.jpg" alt=""></a>
           </div>
           <div>
             <p class="coloris mb">Pointure</p>
