--- a/chaussure3.html
+++ b/chaussure3.html
@@ -41,11 +41,11 @@
               }
             </style>
           </defs>
-          <path id="product-shape1" class="cls-1"
+          <path id="product-shape1" class="cls-1" fill="#fff" stroke="#" stroke-width="2"
             d="M326.6,264.54s-3.12,31.42,4.8,43.65c0-.24,4.8,15.35,27.34,16.55l67.16,11.99,37.16,115.5-86.3,18.36s-53.41-109.26-64.52-117c-1.88-.74,8.65-85.84,14.36-89.06Z" />
-          <path id="product-shape3" class="cls-3"
+          <path id="product-shape3" class="cls-3" fill="#fff" stroke="#" stroke-width="2"
             d="M312.24,353.59s3.58-62.78,14.36-89.06c0,0-2.71-32.36,14.48-58.53,0,0-36.75,37.28-53.14,42.83,0,0-20.62,14.28-6.35,46.27,0,0,21.11,44.79,30.65,58.49Z" />
-          <path id="product-shape5" class="cls-2"
+          <path id="product-shape5" class="cls-2" fill="#fff" stroke="#" stroke-width="2"
             d="M256.31,281.06s-21.42,22.31-3.98,55.22l41.97,74.21s37.77,65.6,39.54,72c0,0,35.12,81.28,66.48,112.2,0,0,108.28,105.81,160.31,107.52,0,0,10.75,3.47,23.55-4.2-.8,0,29.58-13.59,28.78-31.18,0,0,5.59-9.84-.04-19.92,3.07,25.4-25.83,28.74-74.19-1.07-36.5-24.85-72.25-54.33-107.15-88.97-30.64-30.04-51.49-75.65-54.81-86.3-39.93-86.19-64.52-117-85.85-156.5-9.86-19.76-20.81-36.03-9.08-58.67,0,0-24.08,23.53-25.51,25.63Z" />
         </svg>
 
@@ -220,6 +220,7 @@
   document.querySelectorAll("#produit-svg path").forEach(path => {
     path.addEventListener("click", function () {
       selectedElement = this;
+      selectedElement.style.stroke = "black";
       updateZone(this.id);
     });
   });
@@ -235,6 +236,7 @@
     let hex = e.target.getAttribute("data-hex");
     // set the hex color
     selectedElement.style.fill = hex;
+    selectedElement.style.stroke = "none";
   }
 </script>
 
