--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="shop.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.0.4/jscolor.js">
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js"
+    integrity="sha512-fTTVSuY9tLP+l/6c6vWz7uAQqd1rq3Q/GyKBN2jOZvJSLC5RjggSdboIFL1ox09/Ezx/AKwcv/xnDeYN9+iDDA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 
 </head>
 
@@ -209,10 +213,24 @@
     });
   });
 
+  const animation = bodymovin.loadAnimation({
+    container: document.getElementById('produit-svg'),
+    path: 'Animation_confetti.json',
+    renderer: 'svg',
+    loop: true,
+    autoplay: false,
+  })
+
   function changeColor(picker) {
     if (selectedElement) {
       selectedElement.style.fill = picker.toHEXString();
       selectedElement.style.stroke = "none";
+      // Play the animation on hover
+      animation.play();
+      // Stop the animation after playing once
+      animation.addEventListener('loopComplete', function () {
+        animation.stop();
+      });
     }
   }
 </script>
