--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chaussure</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Museion</title>
+  <link rel="stylesheet" href="style2.css">
   <link rel="stylesheet" href="shop.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.0.4/jscolor.js">
   </script>
@@ -13,174 +13,189 @@
     integrity="sha512-fTTVSuY9tLP+l/6c6vWz7uAQqd1rq3Q/GyKBN2jOZvJSLC5RjggSdboIFL1ox09/Ezx/AKwcv/xnDeYN9+iDDA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-
 </head>
 
 <body>
-  <div class="bread_crumb">
-    <a class="grey" href="#">Accueil</a> > <a class="grey" href=".tee-shirts">Tee-shirts</a>
+  <header role="banner">
+    <div class="navbar">
+      <h1 class="logo" id="logo">
+        <a href="#">
+          <img class="logo_classic" src="Logo_Museion_36.svg" alt="Logo" aria-label="Logo">
+        </a>
+      </h1>
+      <div class="row">
+        <h3 class="font"><a href="index.html">Œuvres à porter</a></h3>
+        <h3 class="font"><a href="index.html#a-propos">Notre Histoire</a></h3>
+      </div>
+    </div>
+  </header>
+
+  <div class="bread_crumb mt-2">
+    <a class="grey" href="index.html">Accueil</a>
   </div>
 
   <section role="section">
-    <div class="vue_article">
-      <div class="galerie_article">
-        <svg id="produit-svg" class="color-changing-svg" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 862.5 787.5">
-          <defs>
-            <style>
-              .cls-1 {
-                fill: #f0f;
-              }
-
-              .cls-2 {
-                fill: lime;
-              }
-
-              .cls-3 {
-                fill: blue;
-              }
-
-              .cls-4 {
-                fill: aqua;
-              }
-            </style>
-          </defs>
-          <path id="product-shape1" class="cls-1" fill="#fff" stroke="#" stroke-width="2"
-            d="M326.6,264.54s-3.12,31.42,4.8,43.65c0-.24,4.8,15.35,27.34,16.55l67.16,11.99,37.16,115.5-86.3,18.36s-53.41-109.26-64.52-117c-1.88-.74,8.65-85.84,14.36-89.06Z" />
-          <path id="product-shape2" class="cls-4" fill="#fff" stroke="#" stroke-width="2"
-            d="M597.14,605.35s12.25,26.48,2.53,32.11c0,0-27.13,11.46-66.06-32.79l-28.93-37.65s-11.49-7.66-18.72-2.77c0,0-13.83,4.68-19.57-7.02l-9.57-15.95s-1.91-9.79,5.32-12.55c0,0,28.51-8.72,31.48-6.81l-4.47-7.87s-19.15-40.42-20.64-47.65l-5.45-14.16-86.3,18.36c17.37,50.57,59.06,97.21,115.15,141.53,0,0,48.62,42.66,90.6,54.24,0,0,34.12,8.27,30.4-19.44,0,0,.3-3.31-15.77-41.57Z" />
-          <path id="product-shape3" class="cls-3" fill="#fff" stroke="#" stroke-width="2"
-            d="M312.24,353.59s3.58-62.78,14.36-89.06c0,0-2.71-32.36,14.48-58.53,0,0-36.75,37.28-53.14,42.83,0,0-20.62,14.28-6.35,46.27,0,0,21.11,44.79,30.65,58.49Z" />
-          <path id="product-shape4" class="cls-2" fill="#fff" stroke="#" stroke-width="2"
-            d="M467.6,292.39s38.58.73,41.73-1.21c0,0,8.73,31.78,7.04,47.31,0,0-16.16,5.46-27.29.88-5.95-2.45-8.15-9.85-10.81-17.84l-10.67-29.13Z" />
-          <path id="product-shape5" class="cls-2" fill="#fff" stroke="#" stroke-width="2"
-            d="M256.31,281.06s-21.42,22.31-3.98,55.22l41.97,74.21s37.77,65.6,39.54,72c0,0,35.12,81.28,66.48,112.2,0,0,108.28,105.81,160.31,107.52,0,0,10.75,3.47,23.55-4.2-.8,0,29.58-13.59,28.78-31.18,0,0,5.59-9.84-.04-19.92,3.07,25.4-25.83,28.74-74.19-1.07-36.5-24.85-72.25-54.33-107.15-88.97-30.64-30.04-51.49-75.65-54.81-86.3-39.93-86.19-64.52-117-85.85-156.5-9.86-19.76-20.81-36.03-9.08-58.67,0,0-24.08,23.53-25.51,25.63Z" />
-        </svg>
-
-        <img id="background-image" class="image_article" src="chaussure.jpg" alt="">
+    <div class="section_header container">
+      <div class="row title_container">
+        <h3 class="font-title">Collection Escher</h3>
+        <div class="banner_sup">
+          <a class="img_banner" href="#1"><img src="banniere_museion.jpg"
+              alt="bannière présentant 3 modèles de chaussures de la marque Museion dans des cadres de musée."></a>
+        </div>
       </div>
-      <div class="infos_article">
-        <h2 class="inter_title">Chaussure Personnalisable</h2>
-        <div class="infos_row">
-          <div class="container_note">
-            <div class="star"></div>
-            <p class="note">4,3</p>
-          </div>
-          <p class="avis">234 avis</p>
+    </div>
+    <div class="section_header container">
+      <div class="row title_container">
+        <div class="title container">
+          <h2 class="font-title" id="1">Nos œuvres à porter personnalisables</h2>
         </div>
-        <p class="desc_article">
-          La chaussure qui vous accompagnera tous les jours avec son cuir travaillée avec précision dans nos ateliers.
-          Cette paire s'adapte également à vos goûts car elle est entièrement personnalisable.
-        </p>
-        <p class="b">Sélectionnez la partie à personnaliser</p>
-        <div class="infos_row">
-          <p classs="coloris">Coloris</p>
-          <div class="couleur" id="zone">
-          </div>
-        </div>
-        <form class="column" action="commande" method="post">
-          <div class="infos_row">
-            <label class="row" for="couleur1">
-              <input class="jscolor {onFineChange:'changeColor(this)'}" value="ff95fa">
-            </label>
-          </div>
-          <div>
-            <a href="chaussure3.html"><img class="image_article_petit" src="chaussure.jpg" alt=""></a>
-            <a href="chaussure2.html"><img class="image_article_petit" src="chaussure.jpg" alt=""></a>
-          </div>
-          <div>
-            <p class="coloris mb">Pointure</p>
-            <div class="custom_taille">
-              <select name="taille" id="taille">
-                <option value="null" selected="selected">Choisir</option>
-                <option value="40">40 </option>
-                <option value="42">42 </option>
-              </select>
+      </div>
+    </div>
+
+    <div class="article_list">
+      <div class="article">
+        <a class="nom_article" href="chaussure_pinetaofcalvi.html"> <img class="miniature" src="chaussure2_2.jpg"></a>
+        <div class="article_text">
+          <div class="nom_prix">
+            <a class="nom_article" href="chaussure_pinetaofcalvi.html">
+              Pineta of Calvi Personnalisable
+            </a>
+            <div class="container_prix">
+              <p class="prix_prom"> 120€</p>
+              <p class="prix_barre">150€</p>
+              <p class="tag_solde">-20%</p>
             </div>
           </div>
-          <div class="container_prix">
-            <p class="prix_prom_details"> 120€</p>
-            <p class="prix_barre_details">150€</p>
-            <p class="tag_solde_details">-20%</p>
+          <div class="note_avis">
+            <div class="container_note">
+              <div class="star"></div>
+              <p class="note">4,3</p>
+            </div>
+            <p class="avis">234</p>
           </div>
-          <div class="infos_row">
-            <button type="submit" class="button_black large">Ajouter au panier</button>
+        </div>
+      </div>
+      <div class="article">
+        <a class="nom_article" href="chaussure_otherworld.html"> <img class="miniature" src="chaussure3_3.jpg"></a>
+        <div class="article_text">
+          <div class="nom_prix">
+            <a class="nom_article" href="chaussure_otherworld.html">
+              Other World Personnalisable
+            </a>
+            <div class="container_prix">
+              <p class="prix_prom"> 120€</p>
+              <p class="prix_barre">150€</p>
+              <p class="tag_solde">-20%</p>
+            </div>
           </div>
-        </form>
+          <div class="note_avis">
+            <div class="container_note">
+              <div class="star"></div>
+              <p class="note">4,3</p>
+            </div>
+            <p class="avis">234</p>
+          </div>
+        </div>
+      </div>
+      <div class="article">
+        <a class="nom_article" href="chaussure_dayandnight.html"> <img class="miniature" src="chaussure1_1.jpg"></a>
+        <div class="article_text">
+          <div class="nom_prix">
+            <a class="nom_article" href="chaussure_dayandnight.html">
+              Day and Night Personnalisable
+            </a>
+            <div class="container_prix">
+              <p class="prix_prom"> 120€</p>
+              <p class="prix_barre">150€</p>
+              <p class="tag_solde">-20%</p>
+            </div>
+          </div>
+          <div class="note_avis">
+            <div class="container_note">
+              <div class="star"></div>
+              <p class="note">4,3</p>
+            </div>
+            <p class="avis">234</p>
+          </div>
+        </div>
       </div>
     </div>
-    <p class="inter_other mb p">Détails</p>
-    <div class="details_article mb">
-      <div class="details_row">
-        <p class="b">Livraison</p>
-        <p>Sous 3 à 5 jours ouvrés.</p>
-      </div>
-      <div class="details_row">
-        <p class="b">Garantie</p>
-        <p>2 ans</p>
-      </div>
-      <div class="details_row">
-        <p class="b">Retour</p>
-        <p>Sous 30 jours.</p>
-      </div>
-      <div class="details_row">
-        <p class="b">Composition</p>
-        <p>Cuir, coton</p>
-      </div>
-      <div class="details_row">
-        <p class="b">Pointure</p>
-        <p>Le modèle mesure 1m80 et porte une taille 42.</p>
-      </div>
-      <div class="details_row">
-        <p class="b">Entretien</p>
-        <p>Lavage à la main uniquement</p>
-      </div>
-      <div class="details_row">
-        <p class="b">Fabrication</p>
-        <p>Confectionné au Portugal.</p>
-      </div>
-    </div>
-    <p class="inter_other mb p">Avis</p>
-    <div class="details_article mb">
-      <div class="details_row">
-        <p class="inter_other_2 italic b mb">4,3 sur 5</p>
-        <a class="link_underline black_text" href="">Voir 6 avis</a>
-      </div>
-      <div class="avis_row mb">
-        <div class="avis_titre">
-          <p class="inter_text b">Super Produit</p>
+
+    <div class="section_header container">
+      <div class="row title_container">
+        <div class="title container">
+          <h2 class="font-title" id="a-propos">Notre histoire</h2>
         </div>
-        <div class="avis_down">
-          <p>5 sur 5</p>
-          <p>
-            Yannick Stara | il y a 3 semaines
-          </p>
-        </div>
-      </div>
-      <div class="avis_row mb">
-        <div class="avis_titre">
-          <p class="inter_text b">Super Produit</p>
-        </div>
-        <div class="avis_down">
-          <p>5 sur 5</p>
-          <p>
-            Antoine Dominic | il y a 3 semaines
-          </p>
-        </div>
-      </div>
-      <div class="avis_row mb">
-        <div class="avis_titre">
-          <p class="inter_text b">Super Produit</p>
-        </div>
-        <div class="avis_down">
-          <p>5 sur 5</p>
-          <p>
-            Laurent Capocchi | il y a 3 semaines
-          </p>
-        </div>
+        <p class="desc_article">
+          Museion a pour mission de redonner de l’intérêt pour l’art.
+          En effet, dans une société qui passe de plus en plus de temps sur les écrans Museion veut, grâce à ses œuvres
+          à porter, que la population développe une curiosité de l’art et des travaux des artistes.
+          Ainsi la chaussure devient un média de promotion de la culture. Le but de notre action est de pallier à la
+          baisse d’apprentissage, de nutrition intellectuelle, causée par les réseaux sociaux et plus largement les
+          écrans qui nous entourent.
+        </p>
       </div>
     </div>
   </section>
+
+  <footer role="contentinfo" class="container inter_secondary black_text" aria-label="Footer site">
+    <h1 class="logo_footer" id="logo">
+      <a href="#">
+        <img class="logo_classic" src="Logo_Museion_36.svg" alt="Museion" aria-label="Logo Museion">
+      </a>
+    </h1>
+    <div class="row footer">
+      <div class="row footer_links">
+        <div class="container plan_site">
+          <h2 class="font-med mb">
+            Plan du site
+          </h2>
+
+          <nav class="list">
+            <ul>
+              <li>
+                <a class="link_nounderline" href="index.html">Œuvres à porter</a>
+              </li>
+              <li>
+                <a class="link_nounderline" href="chaussure_pinetaofcalvi.html">Pineta of Calvi</a>
+              </li>
+              <li>
+                <a class="link_nounderline" href="chaussure_otherworld.html">Other World</a>
+              </li>
+              <li>
+                <a class="link_nounderline" href="chaussure_dayandnight.html">Day and Night</a>
+              </li>
+              <li>
+                <a class="link_nounderline" href="#a-propos">Notre Histoire</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="container socials">
+          <h2 class="font-med mb">
+            Réseaux sociaux
+          </h2>
+          <div class="list">
+            <ul>
+              <li><a class="link_nounderline" href="https://www.instagram.com/jd.defranchi/"
+                  target="_blank">Instagram</a></li>
+              <li><a class="link_nounderline" href="https://www.portfolio.jeando-defranchi.fr"
+                  target="_blank">Facebook</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row mention">
+      <div class="row">
+        <a class="link_nounderline" href="#">Mentions légales</a>
+      </div>
+      <div>© 2025 Museion - Tous droits réservés</div>
+    </div>
+  </footer>
 </body>
 
 <script>
@@ -221,18 +236,27 @@
     autoplay: false,
   })
 
-  function changeColor(picker) {
-    if (selectedElement) {
-      selectedElement.style.fill = picker.toHEXString();
-      selectedElement.style.stroke = "none";
-      // Play the animation on hover
-      animation.play();
-      // Stop the animation after playing once
-      animation.addEventListener('loopComplete', function () {
-        animation.stop();
-      });
-    }
+  // Ajout de la fonction changeColor à tous les éléments cliquable
+  var el = document.getElementsByClassName("color");
+  for (var i = 0; i < el.length; i++) {
+    el[i].onclick = changeColor;
   }
+  // définition de la fonction changeColor
+  function changeColor(e) {
+    // get the hex color
+    let hex = e.target.getAttribute("data-hex");
+    // set the hex color
+    selectedElement.style.fill = hex;
+    selectedElement.style.stroke = "none";
+    // Play the animation on hover
+    animation.play();
+    // Stop the animation after playing once
+    animation.addEventListener('loopComplete', function () {
+      animation.stop();
+    });
+  }
+
+
 </script>
 
 </html>
