--- a/chaussure_dayandnight.html
+++ b/chaussure_dayandnight.html
@@ -31,7 +31,8 @@
   </header>
 
   <div class="bread_crumb mt-2">
-    <a class="grey" href="index.html">Accueil</a> > <a class="grey" href="chaussure_pinetaofcalvi.html">Day and Night</a>
+    <a class="grey" href="index.html">Accueil</a> > <a class="grey" href="chaussure_pinetaofcalvi.html">Day and
+      Night</a>
   </div>
 
   <section role="section">
@@ -57,17 +58,15 @@
             </defs>
             <path id="product-shape2" class="cls-4" fill="#fff" stroke="#" stroke-width="2"
               d="M597.14,605.35s12.25,26.48,2.53,32.11c0,0-27.13,11.46-66.06-32.79l-28.93-37.65s-11.49-7.66-18.72-2.77c0,0-13.83,4.68-19.57-7.02l-9.57-15.95s-1.91-9.79,5.32-12.55c0,0,28.51-8.72,31.48-6.81l-4.47-7.87s-19.15-40.42-20.64-47.65l-5.45-14.16-86.3,18.36c17.37,50.57,59.06,97.21,115.15,141.53,0,0,48.62,42.66,90.6,54.24,0,0,34.12,8.27,30.4-19.44,0,0,.3-3.31-15.77-41.57Z" />
-            <path id="product-shape3" class="cls-3" fill="#fff" stroke="#" stroke-width="2"
-              d="M312.24,353.59s3.58-62.78,14.36-89.06c0,0-2.71-32.36,14.48-58.53,0,0-36.75,37.28-53.14,42.83,0,0-20.62,14.28-6.35,46.27,0,0,21.11,44.79,30.65,58.49Z" />
             <path id="product-shape5" class="cls-2" fill="#fff" stroke="#" stroke-width="2"
               d="M256.31,281.06s-21.42,22.31-3.98,55.22l41.97,74.21s37.77,65.6,39.54,72c0,0,35.12,81.28,66.48,112.2,0,0,108.28,105.81,160.31,107.52,0,0,10.75,3.47,23.55-4.2-.8,0,29.58-13.59,28.78-31.18,0,0,5.59-9.84-.04-19.92,3.07,25.4-25.83,28.74-74.19-1.07-36.5-24.85-72.25-54.33-107.15-88.97-30.64-30.04-51.49-75.65-54.81-86.3-39.93-86.19-64.52-117-85.85-156.5-9.86-19.76-20.81-36.03-9.08-58.67,0,0-24.08,23.53-25.51,25.63Z" />
           </svg>
 
-          <img id="background-image" class="image_article" src="chaussure3.jpg" alt="">
+          <img id="background-image" class="image_article" src="chaussure1.jpg" alt="">
         </div>
         <div class="galerie_article width-l">
-          <img class="image_article_moyen" src="paire_chaussure3.jpg" alt="">
-          <img class="image_article_moyen" src="semelle3.jpg" alt="">
+          <img class="image_article_moyen" src="chaussure1_1.jpg" alt="">
+          <img class="image_article_moyen" src="semelle1.jpg" alt="">
         </div>
       </div>
       <div class="infos_article">
@@ -82,7 +81,8 @@
         <p class="desc_article">
           En hommage à Escher, nous vous proposons une paire de nos œuvres à porter reprenant la gravure sur bois :
           Day and Night.
-          Donnez une exposition nouvelle à ce paysage irréel de terrains qui se transforment en oiseaux, affirmant la maîtrise des symétries et métamorphoses par l'artiste néerlandais.
+          Donnez une exposition nouvelle à ce paysage irréel de terrains qui se transforment en oiseaux, affirmant la
+          maîtrise des symétries et métamorphoses par l'artiste néerlandais.
           Cette paire s'adapte également à vos goûts car vous pouvez choisir parmi des couleurs prédéfinies.
         </p>
         <p class="font-med">Sélectionnez une partie rose pour personnaliser sa couleur</p>
@@ -119,7 +119,7 @@
           </div>
           <div>
             <a href="chaussure_pinetaofcalvi.html"><img class="image_article_petit" src="chaussure2_2.jpg" alt=""></a>
-            <a href="chaussure_otherworld.html"><img class="image_article_petit" src="chaussure1_1.jpg" alt=""></a>
+            <a href="chaussure_otherworld.html"><img class="image_article_petit" src="chaussure3_3.jpg" alt=""></a>
           </div>
           <div>
             <p class="coloris mb">Pointure</p>
